welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value nbBscuit
while (nbBscuit != 4) {
       ^