welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit:Int = 0

while (nbBscuit != 4) {
	while (!estSurBiscuit) {
  	avance();
	}
	nbBiscuit = nbBiscuit + 1;
}